<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/autoCompleteTextView"
            app:layout_constraintTop_toBottomOf="@+id/guideline1"
            app:layout_constraintBottom_toTopOf="@+id/checkBox"
            android:text="@string/my_name_is_julia_2"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toEndOf="@+id/textClock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            android:autofillHints="Julia"
            android:hint="@string/write_name"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textClock"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintBottom_toBottomOf="@+id/guideline3"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/autoCompleteTextView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/button"
            android:text="@string/some_mode"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="2"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/this_is_text_clock"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

        <CheckedTextView
            android:id="@+id/checkedTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="2"
            app:layout_constraintStart_toEndOf="@+id/autoCompleteTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            android:text="@string/this_is_check_ed_text_view"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"/>

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="2"
            app:layout_constraintStart_toEndOf="@+id/textClock"
            app:layout_constraintEnd_toStartOf="@+id/checkedTextView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox"
            android:text="@string/auto_com_plete_tv"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>